testsuite/tests/interpreter_errors/binop_type_error/test.out
script.lkql:1:6: error: Type error: expected Int but got Str
1 | 15 + "Hello"
  |      ^^^^^^^
